# pywintray

./: .gitignore  README.md  build.bat  icon_handle.c  icon_handle.h  mkdocs.yml  pyproject.toml  pywintray.c  pywintray.pyi  requirements-dev.txt  requirements-docs.txt
.github/workflows/: build-wheels.yml  build_and_test.yml  deploy-docs.yml
docs/en/: api-reference.md  index.md
docs/zh/: api-reference.md  index.md
macros/: __init__.py  pyi_signature.py
src_c/: _test_api.c  icon_handle.c  id_manager.c  menu.c  menu_item.c  pywintray.c  tray_icon.c
src_c/include/: pywintray.h
src_py/pywintray/: __init__.pyi
tests/: test_args.py  test_features.py  test_legacy.py  test_sync.py  utils.py
tests/test_api_stubs/: _test_api.pyi
