[project]
name = "pywintray"
version = "0.0.1"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src_py"]

[tool.setuptools]
py-modules = ["pywintray"]

[[tool.setuptools.ext-modules]]
name = "pywintray.__init__"
sources = [
    "src_c/pywintray.c",
    "src_c/tray_icon.c",
    "src_c/icon_handle.c",
    "src_c/menu.c",
    "src_c/menu_item.c",
    "src_c/id_manager.c",
    "src_c/_test_api.c",
]
include-dirs = ["src_c/include"]
extra-compile-args = ["/utf-8", "/O1", "/Oi", "/W3", "/WX", "/GS-"]
extra-link-args = ["/NOENTRY", "/NODEFAULTLIB:msvcrt.lib"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
